--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,3 @@
 platform :ios, '7.0'
 
-pod 'MTKPrivacyPods',:git => 'git@192.168.1.58:Joy/iOS-CocoaPods-Privacy.git'
+pod 'MTKPrivacyPods',:git => 'https://github.com/CLJian/MTKPrivacyPods.git'
